# freeorion-tui

./: .gitignore  DECISIONS.md  DOGFOOD.md  Makefile  README.md  freeorion.py  pyproject.toml  pyrightconfig.json
freeorion_tui/: __init__.py  agent_api.py  app.py  content.py  engine.py  screens.py  tui.tcss
screenshots/: README.md  hero.tcell
tests/: api_qa.py  perf.py  playtest.py  qa.py
